# defunctionalize

./: .gitignore  Cargo.toml  README.md
defunctionalize/: Cargo.toml
defunctionalize-proc-macro/: Cargo.toml
defunctionalize-proc-macro/src/: lib.rs  signature.rs
defunctionalize/src/: lib.rs
src/: lib.rs  signature.rs  simple_arg.rs
