[package]
name = "defunctionalize-proc-macro"
description = "Defunctionalization as a proc-macro over modules"
version = "0.2.0"
authors = ["Cameron Eldridge <cam.eldridge@gmail.com>"]
edition = "2018"
homepage = "https://github.com/foxfriends/defunctionalize"
repository = "https://github.com/foxfriends/defunctionalize"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
heck = "0.3.1"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
